--- a/home.html
+++ b/home.html
@@ -23,6 +23,12 @@
 
     <!-- Jquery -->
     <script src="./assets/js/jquery-3.7.1.min.js"></script>
+
+    <!-- Slick CSS -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
+
 </head>
 
 <body>
@@ -744,24 +750,127 @@
 
     <section class="success-gallery my-5 container overflow-hidden">
         <h4 class="fw-bold text-center mb-5">من هنا بدأ نجاحهم</h4>
-        <div class="swiper-container">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="./assets/images/student-1.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="./assets/images/student-2.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="./assets/images/student-3.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="./assets/images/student-4.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="./assets/images/student-5.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="./assets/images/student-1.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="./assets/images/student-2.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="./assets/images/student-3.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="./assets/images/student-4.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="./assets/images/student-5.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="./assets/images/student-1.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="./assets/images/student-2.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="./assets/images/student-3.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="./assets/images/student-4.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="./assets/images/student-5.jpg" alt=""></div>
+        <div class="blog-carousel slider-brand">
+            <div class="blog-post-box">
+                <div class="blog-post-box-inner">
+                    <div class="blog-post-image">
+                        <img src="./assets/images/student-1.jpg" alt="Student 1" />
+                    </div>
+                </div>
             </div>
+
+            <div class="blog-post-box">
+                <div class="blog-post-box-inner">
+                    <div class="blog-post-image">
+                        <img src="./assets/images/student-2.jpg" alt="Student 2" />
+                    </div>
+                </div>
+            </div>
+
+            <div class="blog-post-box">
+                <div class="blog-post-box-inner">
+                    <div class="blog-post-image">
+                        <img src="./assets/images/student-3.jpg" alt="Student 3" />
+                    </div>
+                </div>
+            </div>
+
+            <div class="blog-post-box">
+                <div class="blog-post-box-inner">
+                    <div class="blog-post-image">
+                        <img src="./assets/images/student-4.jpg" alt="Student 3" />
+                    </div>
+                </div>
+            </div>
+
+            <div class="blog-post-box">
+                <div class="blog-post-box-inner">
+                    <div class="blog-post-image">
+                        <img src="./assets/images/student-5.jpg" alt="Student 4" />
+                    </div>
+                </div>
+            </div>
+
+            <div class="blog-post-box">
+                <div class="blog-post-box-inner">
+                    <div class="blog-post-image">
+                        <img src="./assets/images/student-1.jpg" alt="Student 1" />
+                    </div>
+                </div>
+            </div>
+
+            <div class="blog-post-box">
+                <div class="blog-post-box-inner">
+                    <div class="blog-post-image">
+                        <img src="./assets/images/student-2.jpg" alt="Student 2" />
+                    </div>
+                </div>
+            </div>
+
+            <div class="blog-post-box">
+                <div class="blog-post-box-inner">
+                    <div class="blog-post-image">
+                        <img src="./assets/images/student-3.jpg" alt="Student 3" />
+                    </div>
+                </div>
+            </div>
+
+            <div class="blog-post-box">
+                <div class="blog-post-box-inner">
+                    <div class="blog-post-image">
+                        <img src="./assets/images/student-4.jpg" alt="Student 3" />
+                    </div>
+                </div>
+            </div>
+
+            <div class="blog-post-box">
+                <div class="blog-post-box-inner">
+                    <div class="blog-post-image">
+                        <img src="./assets/images/student-5.jpg" alt="Student 4" />
+                    </div>
+                </div>
+            </div>
+
+            <div class="blog-post-box">
+                <div class="blog-post-box-inner">
+                    <div class="blog-post-image">
+                        <img src="./assets/images/student-1.jpg" alt="Student 1" />
+                    </div>
+                </div>
+            </div>
+
+            <div class="blog-post-box">
+                <div class="blog-post-box-inner">
+                    <div class="blog-post-image">
+                        <img src="./assets/images/student-2.jpg" alt="Student 2" />
+                    </div>
+                </div>
+            </div>
+
+            <div class="blog-post-box">
+                <div class="blog-post-box-inner">
+                    <div class="blog-post-image">
+                        <img src="./assets/images/student-3.jpg" alt="Student 3" />
+                    </div>
+                </div>
+            </div>
+
+            <div class="blog-post-box">
+                <div class="blog-post-box-inner">
+                    <div class="blog-post-image">
+                        <img src="./assets/images/student-4.jpg" alt="Student 3" />
+                    </div>
+                </div>
+            </div>
+
+            <div class="blog-post-box">
+                <div class="blog-post-box-inner">
+                    <div class="blog-post-image">
+                        <img src="./assets/images/student-5.jpg" alt="Student 4" />
+                    </div>
+                </div>
+            </div>
+
         </div>
     </section>
 
@@ -877,22 +986,54 @@
     <script src="./assets/js/swiper-bundle.min.js"></script>
 
     <script src="./assets/js/stacked-card.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </body>
 
 <script>
-    var mySwiper = new Swiper(".swiper-container", {
-        spaceBetween: 10,
-        centeredSlides: true,
-        roundLengths: true,
-        loop: true,
-        breakpoints: {
-            640: {
-                slidesPerView: 3,
+    $('.slider-brand').slick({
+        centerMode: true,
+        centerPadding: '60px',
+        variableWidth: true,
+        infinite: true,
+        slidesToShow: 2,
+        speed: 300,
+        arrows: true,
+        dots: false,
+        responsive: [
+            {
+                breakpoint: 1024,
+                settings: {
+                    slidesToShow: 1,
+                    centerMode: true,
+                }
             },
-            1280: {
-                slidesPerView: 5,
+            {
+                breakpoint: 768,
+                settings: {
+                    slidesToShow: 1,
+                    centerPadding: '40px',
+                    centerMode: true,
+                    variableWidth: false
+                }
             },
-        },
+            {
+                breakpoint: 480,
+                settings: {
+                    slidesToShow: 1,
+                    centerPadding: '20px',
+                    centerMode: true,
+                    variableWidth: false
+                }
+            }
+        ]
+    });
+
+    $('.slider-brand .slick-slide').on('click', function () {
+        const index = $(this).data('slick-index');
+        const current = $('.slider-brand').slick('slickCurrentSlide');
+        if (index !== current) {
+            $('.slider-brand').slick('slickGoTo', index);
+        }
     });
 </script>
 
